Fixing pages' height and overflow problems

--- a/src/components/itemList/itemList.scss
+++ b/src/components/itemList/itemList.scss
@@ -4,7 +4,6 @@
 .item-list {
     min-height: 20vh;
     height: auto;
-    overflow: auto;
     margin: $spacing-20 0 $spacing-20;
     color: $font-color-base;
 
